--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                 Desarrollo de aplicaciones back-end desde diseño, hasta pruebas y despliegue.
             </p>
 
-            <p class="text-primary cabecalho">
+            <p class="fuente">
                 Stack:
             </p>
 
@@ -41,7 +41,7 @@
                 ASP.NET Core, SQL Server
             </p>
 
-            <p class="text-primary cabecalho">
+            <p class="fuente">
                 Experiencia:
             </p>
 
@@ -59,7 +59,7 @@
                 Creación de aplicaciones front-end utilizando las últimas herramientas del mercado integradas con el back-end
             </p>
 
-            <p class="text-primary cabecalho">
+            <p class="fuente">
                 Stack:
             </p>
 
@@ -67,7 +67,7 @@
                 React, Angular
             </p>
 
-            <p class="text-primary cabecalho">
+            <p class=" fuente">
                 Experiencia:
             </p>
 
