--- a/Views/Proyecto/Proyecto.cshtml
+++ b/Views/Proyecto/Proyecto.cshtml
@@ -16,7 +16,7 @@
                         <p class="card-text">@Html.DisplayFor(modelItem=>projeto.Descripcion)</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="@Html.DisplayFor(modelItem=>projeto.Link)" target="_blank"
+                        <a class="btn btn-custom" href="@Html.DisplayFor(modelItem=>projeto.Link)" target="_blank"
                            rel="noopener noreferrer">Visitar</a>
                     </div>
                 </div>
