--- a/Views/Email/SendEmail.cshtml
+++ b/Views/Email/SendEmail.cshtml
@@ -17,7 +17,7 @@
     <form asp-action="SendEmail" asp-controller="Email" method="post">
         <input type="text" asp-for="Para" class="form-control" />
         <div class="input-group-btn">
-            <button class="btn btn-dark mt-3" type="submit">
+            <button class="btn btn-custom" type="submit">
                 Enviar
             </button>
         </div>
